--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "MiraiByPassKemNasa",
     "version": "1.2.14",
-    "description": "Kem Premium Nasa Platinum",
+    "description": "Kem Premium Dino Platinum, Developer - Founder - Admin 🌸",
     "main": "mirai.js",
     "scripts": {
         "start": "node index",
