--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "MiraiByPassKemNasa",
+    "name": "MiraiByPassKemSadBoiz",
     "version": "1.2.14",
-    "description": "Kem Premium Dino Platinum, Developer - Founder - Admin 🌸",
+    "description": "JustCodeForFun 🌸",
     "main": "mirai.js",
     "scripts": {
         "start": "node index",
